defect fix - use browser back button will result in search form part invisible

--- a/public/rezgate/css/picc.css
+++ b/public/rezgate/css/picc.css
@@ -33,7 +33,7 @@ ul.activity-dates-block > li > div > input {
 }
 
 a.search-button > div {
-	margin-right:20px;
+	margin-right:23px;
 	margin-bottom:10px;
 	font-family: Georgia, Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif;
 }
